--- a/cloudformation/service-template.yml
+++ b/cloudformation/service-template.yml
@@ -4,11 +4,11 @@ Parameters:
   VpcId:
     Type: AWS::EC2::VPC::Id
   SyncInstanceType:
-    Description: Instance type that will be used in created cluster
+    Description: Instance type that will be used in created cluster to sync the chain for the firs ttime
     Type: String
     Default: c5.large
   PostSyncInstanceType:
-    Description: Instance type that will be used in created cluster
+    Description: Instance type that will be used in created cluster when starting from a synced chain
     Type: String
     Default: t2.medium
   ChainSnapshotId:
@@ -56,7 +56,12 @@ Parameters:
     Default: 100
   SyncToBlock:
     Type: Number
-    Default: 0
+    Default: 6100000
+  AlertsEmail:
+    Description: REQUIRED whatever dev or ops email list is appropriate for your project
+    Type: String
+    AllowedPattern: "^[\\x20-\\x45]?[\\w-\\+]+(\\.[\\w]+)*@[\\w-]+(\\.[\\w]+)*(\\.[a-z]{2,})$"
+    ConstraintDescription: 'must be a valid email address'
 
 Mappings:
   AWSRegionToAMI:
@@ -76,9 +81,10 @@ Mappings:
       AMI: ami-bfb5fec6
     eu-central-1:
       AMI: ami-ac055447
+
 Conditions:
   SSHAccess: !Not [!Equals [ !Ref KeyName, ""]]
-  Synced: !Not [!Equals [ !Ref ChainSnapshotId, ""]]
+  Syncing: !Equals [ !Ref ChainSnapshotId, ""]
 
 Resources:
   ECSCluster:
@@ -168,9 +174,31 @@ Resources:
               - cloudformation:DescribeStacks
             Resource: "*"
           - Effect: Allow
-            Action:
-              - cloudformation:UpdateStack
-            Resource: !Ref AWS::StackId
+            Action: sns:Publish
+            Resource: !Ref SyncTopic
+
+          # needed for self-update
+          # - Effect: Allow
+          #   Action:
+          #     - cloudformation:UpdateStack
+          #   Resource: !Ref AWS::StackId
+          # - Effect: Allow
+          #   Action:
+          #     - ec2:DescribeVpcs
+          #   Resource: '*'
+          # - Effect: Allow
+          #   Action:
+          #     - lambda:GetFunctionConfiguration
+          #     - lambda:InvokeFunction
+          #   Resource: !Ref UpdateDNSLambda
+          # - Effect: Allow
+          #   Action:
+          #     - iam:PassRole
+          #   Resource: !Sub arn:aws:iam:${AWS::Region}:${AWS::AccountId}:role/${AWS::StackName}-ecs-role
+          # - Effect: Allow
+          #   Action:
+          #     - autoscaling:CreateLaunchConfiguration
+          #   Resource: !Sub arn:aws:autoscaling:${AWS::Region}:${AWS::AccountId}:launchConfiguration:*:launchConfigurationName/${AWS::StackName}-ECSLaunchConfiguration
   ECSInstanceProfile:
     Type: AWS::IAM::InstanceProfile
     Properties:
@@ -194,18 +222,18 @@ Resources:
           PropagateAtLaunch: true
     CreationPolicy:
       ResourceSignal:
-        Timeout: PT15M
+        Timeout: PT10M
     UpdatePolicy:
       AutoScalingRollingUpdate:
         MinInstancesInService: 1
         MaxBatchSize: 1
-        PauseTime: PT15M
-        # SuspendProcesses:
-        #   - HealthCheck
-        #   - ReplaceUnhealthy
-        #   - AZRebalance
-        #   - AlarmNotification
-        #   - ScheduledActions
+        PauseTime: PT10M
+        SuspendProcesses:
+          - HealthCheck
+          - ReplaceUnhealthy
+          - AZRebalance
+          - AlarmNotification
+          - ScheduledActions
         WaitOnResourceSignals: true
 
   ECSLaunchConfiguration:
@@ -213,9 +241,9 @@ Resources:
     Properties:
       ImageId: !FindInMap [AWSRegionToAMI, !Ref "AWS::Region", AMI]
       InstanceType: !If
-        - Synced
-        - !Ref PostSyncInstanceType
+        - Syncing
         - !Ref SyncInstanceType
+        - !Ref PostSyncInstanceType
       KeyName: !If
         - SSHAccess
         - !Ref KeyName
@@ -227,18 +255,18 @@ Resources:
       - DeviceName: "/dev/sdh"
         Ebs:
           SnapshotId: !If
-            - Synced
-            - !Ref ChainSnapshotId
+            - Syncing
             - !Ref "AWS::NoValue"
+            - !Ref ChainSnapshotId
           VolumeSize: !Ref VolumeSize
           VolumeType: !If
-            - Synced
-            - !Ref PostSyncVolumeType
+            - Syncing
             - !Ref SyncVolumeType
+            - !Ref PostSyncVolumeType
           Iops: !If
-            - Synced
-            - !Ref PostSyncIops
+            - Syncing
             - !Ref SyncIops
+            - !Ref PostSyncIops
       UserData:
         "Fn::Base64": !Sub |
           #!/bin/bash
@@ -246,7 +274,9 @@ Resources:
           yum install -y aws-cfn-bootstrap jq
           /opt/aws/bin/cfn-init -v --region ${AWS::Region} --stack ${AWS::StackName} --resource ECSLaunchConfiguration
           /opt/aws/bin/cfn-signal -e $? --region ${AWS::Region} --stack ${AWS::StackName} --resource ECSAutoScalingGroup
+
     Metadata:
+      ChainSnapshotId: !Ref ChainSnapshotId
       AWS::CloudFormation::Init:
         config:
           packages:
@@ -259,14 +289,15 @@ Resources:
               command: "mkdir /data"
               test: "[ ! -d /data ]"
             03_mkfs:
-              command: !If [ Synced, "echo 'not running mkfs /dev/sdh'", "mkfs.ext4 /dev/sdh"]
+              command: !If [ Syncing, "mkfs.ext4 /dev/sdh", "echo 'not running mkfs /dev/sdh'"]
             04_mount:
               command: "mount /dev/sdh /data"
               test: "! mountpoint -q /data"
-            # 05_register_dns:
-            #   command: "bash -x /home/ec2-user/register-dns"
-            05_update_stack_on_sync:
-              command: !If [Synced, "echo 'not updating stack on sync'", "bash -x /home/ec2-user/update-stack-on-sync"]
+            05_watch_update:
+              command: !If
+                - Syncing
+                - "nohup /usr/local/bin/sync-and-alert.sh >> /var/log/sync_monitor.log 2>&1 &"
+                - "echo 'synced, skipping sync_and_alert flow'"
 
           files:
             "/etc/cfn/cfn-hup.conf":
@@ -322,44 +353,18 @@ Resources:
                 log_group_name = ${ECSLogGroup}
                 log_stream_name = {instance_id}/var/log/ecs/audit
                 datetime_format = %Y-%m-%dT%H:%M:%SZ
-            "/home/ec2-user/change-record-set.json.tmpl":
-              mode: "000400"
-              owner: ec2-user
-              group: ec2-user
-              content: !Sub |
-                {
-                    "Comment": "Update DNS of {DNSName}",
-                    "Changes": [
-                        {
-                            "Action": "UPSERT",
-                            "ResourceRecordSet": {
-                                "Name": "${DNSName}",
-                                "Type": "A",
-                                "TTL": 300,
-                                "ResourceRecords": [
-                                    {
-                                        "Value": "{local_ipv4}"
-                                    }
-                                ]
-                            }
-                        }
-                    ]
-                }
 
-            # "/home/ec2-user/register-dns":
-            #   mode: "000400"
-            #   owner: ec2-user
-            #   group: ec2-user
-            #   content: !Sub |
-            #     cd /home/ec2-user
-            #     LOCAL_IP=`curl http://169.254.169.254/latest/meta-data/local-ipv4`
-            #     sed -e s/{local_ipv4}/$LOCAL_IP/g change-record-set.json.tmpl > change-record-set.json
-            #     aws route53 change-resource-record-sets --hosted-zone-id ${HostedZone} --change-batch file:///home/ec2-user/change-record-set.json
+            # "/etc/cron.d/mycron":
+            #     mode: "000644"
+            #     owner: root
+            #     group: root
+            #     content: |
+            #       * * * * * root /usr/local/bin/sync-and-alert.sh
 
-            "/home/ec2-user/update-stack-on-sync":
-              mode: "000400"
-              owner: ec2-user
-              group: ec2-user
+            "/usr/local/bin/sync-and-alert.sh":
+              mode: "000755"
+              owner: root
+              group: root
               content: !Sub |
                 set -x
                 # set -euo pipefail
@@ -367,30 +372,26 @@ Resources:
                 export AWS_DEFAULT_REGION="${AWS::Region}"
 
                 TARGET_BLOCK="${SyncToBlock}"
-                STACK_NAME="${AWS::StackName}"
+                TARGET_BLOCK_HEX=$(printf "%x\n" "$TARGET_BLOCK")
+                STACK_NAME="${AWS::StackId}"
                 LOCAL_IP=$(curl http://169.254.169.254/latest/meta-data/local-ipv4)
                 AWS_INSTANCE_ID=$(curl http://169.254.169.254/latest/meta-data/instance-id)
                 ROOT_DISK_ID=$(aws ec2 describe-volumes --filter "Name=attachment.instance-id, Values=$AWS_INSTANCE_ID" | \
                   jq -r '.Volumes[] | select(.Attachments[].Device == "/dev/sdh") | .VolumeId')
 
-                BLOCK_ZERO_RESP='{"result":"0x0"}'
+                BLOCK_ZERO_RESP='{"result":null}'
 
-                poll() {
-                  RESULT=$(curl -X POST -H 'Content-Type: application/json' \
-                    --data '{"jsonrpc":"2.0","method":"eth_blockNumber","params":[],"id":83}' \
-                    "$LOCAL_IP:8545" || echo "$BLOCK_ZERO_RESP")
-                  BLOCK_HEX=$(echo $RESULT | jq .result -r | cut -c3-) # cut off 0x prefix
-                  echo $(( 16#$BLOCK_HEX ))
-                }
-
-                # accepts args: target block
                 sync_to_block() {
-                  echo "WILL EXIT AFTER SYNCING TO BLOCK $1"
+                  echo "WILL EXIT AFTER SYNCING TO BLOCK $TARGET_BLOCK"
                   while true
                   do
-                    CURRENT_BLOCK=$(poll)
-                    echo "CURRENT BLOCK: $CURRENT_BLOCK"
-                    if [[ "$CURRENT_BLOCK" -ge "$1" ]];
+                    SYNC_STATUS=$(curl -X POST -H 'Content-Type: application/json' \
+                      --data "{\"jsonrpc\":\"2.0\",\"method\": \"eth_getBlockByNumber\", \"params\": [\"0x$TARGET_BLOCK_HEX\", true],\"id\":83}" \
+                      "$LOCAL_IP:8545" || echo "$BLOCK_ZERO_RESP")
+
+                    SYNC_STATUS=$(echo "$SYNC_STATUS" | jq -r .result)
+
+                    if [ $(is_empty_or_null "$SYNC_STATUS") != "1" ];
                     then
                       echo "SYNC COMPLETE!"
                       break
@@ -400,19 +401,72 @@ Resources:
                   done
                 }
 
-                # accepts arg: target block, stack name
-                get_update_stack_params() {
-                  echo "taking snapshot of EBS volume: $ROOT_DISK_ID"
-                  TARGET_BLOCK="$1"
-                  PARAMETERS=$(aws cloudformation describe-stacks --stack-name "$2" | \
-                    jq '[.Stacks[] | select(.StackStatus=="UPDATE_COMPLETE" or .StackStatus=="CREATE_COMPLETE")][0].Parameters')
-
-                  if [ "$PARAMETERS" == "null" ];
+                is_empty_or_null() {
+                  if [ "$1" == "null" ] || [ $(echo $1 | wc -c) -le 1 ];
                   then
-                    echo "stack not found"
-                    exit 1
+                    echo 1
+                  else
+                    echo 0
                   fi
+                }
 
+                urlencode() {
+                  echo $(python -c "import urllib; print urllib.quote('''$1''')")
+                }
+
+                ensure_stack_ready() {
+                  while true;
+                  do
+                    STATUS=$(aws cloudformation describe-stacks --stack-name "$STACK_NAME" | jq -r .Stacks[].StackStatus)
+                    if [ "$STATUS" == "CREATE_COMPLETE" ] || [ "$STATUS" == "UPDATE_COMPLETE" ] || [ "$STATUS" == "ROLLBACK_COMPLETE" ];
+                    then
+                      break
+                    elif [ "$STATUS" == "CREATE_IN_PROGRESS" ];
+                    then
+                      aws cloudformation wait stack-create-complete --stack-name "$STACK_NAME"
+                    elif [ "$STATUS" == "UPDATE_IN_PROGRESS" ];
+                    then
+                      aws cloudformation wait stack-update-complete --stack-name "$STACK_NAME"
+                    else
+                      echo "unexpected stack status: $STATUS"
+                      exit 1
+                    fi
+                  done
+
+                  echo "stack ready!"
+                }
+
+                # accepts args: target block, stack name
+                # sync_and_update_stack() {
+                #   sync_to_block "$TARGET_BLOCK"
+                #   ensure_stack_ready "$STACK_NAME"
+                #   PARAMETERS=$(aws cloudformation describe-stacks --stack-name "$STACK_NAME" | \
+                #     jq -c '[.Stacks[] | select(.StackStatus=="UPDATE_COMPLETE" or .StackStatus=="CREATE_COMPLETE")][0].Parameters')
+
+                #   if [ "$PARAMETERS" == "null" ];
+                #   then
+                #     echo "stack not found"
+                #     exit 1
+                #   fi
+
+                #   CURRENT_SNAPSHOT=$(echo "$PARAMETERS" | jq -c '.[] | select(.ParameterKey == "ChainSnapshotId")')
+                #   if [ $(is_empty_or_null "$CURRENT_SNAPSHOT") == "1" ]
+                #   then
+                #     PARAMETERS=$(echo $PARAMETERS | jq -c ".[.|length] |= . + {\"ParameterKey\":\"ChainSnapshotId\",\"ParameterValue\":\"$SNAPSHOT_ID\"}")
+                #   else
+                #     PARAMETERS=$(echo $PARAMETERS | jq -c "[.[] | select(.ParameterKey == \"ChainSnapshotId\").ParameterValue = \"$SNAPSHOT_ID\"]")
+                #   fi
+
+                #   echo "updating stack with parameters: $PARAMETERS"
+                #   aws cloudformation update-stack \
+                #     --stack-name "$STACK_NAME" \
+                #     --parameters "$PARAMETERS" \
+                #     --use-previous-template \
+                #     --capabilities CAPABILITY_NAMED_IAM
+                # }
+
+                create_snapshot_and_alert() {
+                  echo "taking snapshot of EBS volume: $ROOT_DISK_ID"
                   SNAPSHOT_ID=$(aws ec2 create-snapshot \
                     --volume-id "$ROOT_DISK_ID" \
                     --description "ethereum blockchain synced up to block $TARGET_BLOCK" \
@@ -420,31 +474,38 @@ Resources:
 
                   echo "waiting for snapshot to finish: $SNAPSHOT_ID"
                   aws ec2 wait snapshot-completed --filters "Name=snapshot-id, Values=$SNAPSHOT_ID"
+                  URL_ENCODED_STACK_ID=$(urlencode "$STACK_NAME")
+                  UPDATE_URL="https://console.aws.amazon.com/cloudformation/home?region=${AWS::Region}#/stack/update?stackId=$URL_ENCODED_STACK_ID"
 
-                  CURRENT_SNAPSHOT=$(echo "$PARAMETERS" | jq '.[] | select(.ParameterKey == "ChainSnapshotId")')
-                  if [ $(echo $CURRENT_SNAPSHOT | wc -c) == "0" ]
+                  CURRENT_SNAPSHOT=$(echo "$PARAMETERS" | jq -c '.[] | select(.ParameterKey == "ChainSnapshotId")')
+                  if [ $(is_empty_or_null "$CURRENT_SNAPSHOT") == "1" ]
                   then
-                    PARAMETERS=$(echo $PARAMETERS | jq ".[.|length] |= . + {\"ParameterKey\":\"ChainSnapshotId\",\"ParameterValue\":\"$SNAPSHOT_ID\"}")
+                    PARAMETERS=$(echo $PARAMETERS | jq -c ".[.|length] |= . + {\"ParameterKey\":\"ChainSnapshotId\",\"ParameterValue\":\"$SNAPSHOT_ID\"}")
                   else
-                    PARAMETERS=$(echo $PARAMETERS | jq "[.[] | select(.ParameterKey == \"ChainSnapshotId\").ParameterValue = \"$SNAPSHOT_ID\"]")
+                    PARAMETERS=$(echo $PARAMETERS | jq -c "[.[] | select(.ParameterKey == \"ChainSnapshotId\").ParameterValue = \"$SNAPSHOT_ID\"]")
                   fi
 
-                  echo "$PARAMETERS"
-                }
-
-                # accepts args: target block, stack name
-                sync_and_update_stack() {
-                  sync_to_block "$1"
-                  PARAMETERS=$(get_update_stack_params "$1" "$2")
-                  echo "updating stack with parameters: $PARAMETERS"
-                  aws cloudformation update-stack \
-                    --stack-name "$2" \
-                    --parameters "$PARAMETERS" \
+                  UPDATE_COMMAND="aws cloudformation update-stack \
+                    --stack-name $STACK_NAME \
+                    --parameters $PARAMETERS \
                     --use-previous-template \
-                    --capabilities CAPABILITY_NAMED_IAM
+                    --capabilities CAPABILITY_NAMED_IAM"
+
+                  aws sns publish --topic-arn "${SyncTopic}" \
+                    --subject "Ethereum stack synced and ready for update!" \
+                    --message "follow the below link and update your stack with the ChainSnapshotId parameter set to: $SNAPSHOT_ID \n $UPDATE_URL \n\n \
+                    or update with AWS CLI using the following command: $UPDATE_COMMAND"
                 }
 
-                sync_and_update_stack $TARGET_BLOCK $STACK_NAME
+                if [ "${ChainSnapshotId}" == "" ];
+                then
+                  echo "will sync, snapshot chaindata and update stack"
+                  ensure_stack_ready "$STACK_NAME"
+                  sync_to_block "$TARGET_BLOCK"
+                  create_snapshot_and_alert
+                else
+                  echo "already working from snapshot: ${ChainSnapshotId}"
+                fi
 
           services:
             sysvinit:
@@ -514,7 +575,7 @@ Resources:
             SourcePath: /data/chains
           Name: parity-chains
 
-  Service:
+  ECSService:
     Type: AWS::ECS::Service
     Properties:
       ServiceName: !Sub ${AWS::StackName}-service
@@ -524,7 +585,7 @@ Resources:
       # TaskDefinition: !Join [ "", ['arn:aws:ecs:', !Ref "AWS::Region", ':', !Ref "AWS::AccountId", ':task-definition/parity:1']]
 
   HostedZone:
-    Type: "AWS::Route53::HostedZone"
+    Type: AWS::Route53::HostedZone
     Properties:
       Name: !Ref DNSName
 
@@ -533,17 +594,22 @@ Resources:
     Properties:
       Code:
         S3Bucket: mvayngrib-serverless-deployment
-        S3Key: !Join ["/", ["${AWS::StackName}", "lambda.zip"]]
-        FunctionName: ,
-        Handler: "functions/update-dns.handler",
-        MemorySize: 128
-        Role:
-          Fn:GetAtt: [UpdateDNSLambdaExecutionRole, Arn]
-        Runtime: nodejs8.10
-        Timeout: 60
+        S3Key: !Sub ${AWS::StackName}/lambda.zip
+      FunctionName: !Sub ${AWS::StackName}-${AWS::Region}-update-dns
+      Handler: functions/update-dns.handler
+      MemorySize: 128
+      Role:
+        Fn::GetAtt:
+          - UpdateDNSLambdaExecutionRole
+          - Arn
+      Runtime: nodejs8.10
+      Timeout: 60
 
   UpdateDNSLambdaExecutionRole:
     Type: AWS::IAM::Role
+    DependsOn:
+      - ECSService
+
     Properties:
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
@@ -573,14 +639,28 @@ Resources:
             - route53:*
             Resource: '*'
 
+  UpdateDNSLambdaLogGroup:
+    Type: "AWS::Logs::LogGroup"
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${AWS::StackName}-${AWS::Region}-update-dns
+      RetentionInDays: 3
+
   DNSUpdater:
     Type: Custom::DNSUpdater
     Properties:
       ServiceToken: !GetAtt UpdateDNSLambda.Arn
       cluster: !Ref ECSCluster
-      hostedZone: !Ref hosted-zone-id
+      hostedZone: !Ref HostedZone
       dnsName: !Ref DNSName
       snapshotId: !Ref ChainSnapshotId
+
+  SyncTopic:
+    Type: AWS::SNS::Topic
+    Properties:
+      TopicName: !Sub ${AWS::StackName}-${AWS::Region}-sync-alarm
+      Subscription:
+        - Protocol: email
+          Endpoint: !Ref AlertsEmail
 
 Outputs:
   ECSSecurityGroup:
